# Encrypted-GLB-Model

./: .gitignore  pnpm-lock.yaml
app/: layout.tsx  page.tsx
app/api/encrypted-model-paratial/: route.js
app/api/get-encrypted-model/: route.js
decrypt_glb_wasm/: Cargo.toml
decrypt_glb_wasm/pkg/: decrypt_glb_wasm.d.ts  decrypt_glb_wasm.js  decrypt_glb_wasm_bg.wasm  decrypt_glb_wasm_bg.wasm.d.ts  package.json
decrypt_glb_wasm/src/: crypto.js  lib.rs
public/: model_encrypted.glb  yi.glb
python/: decrypt.py
