[package]
name = "decrypt_glb_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.33"
aes = "0.7"
block-modes = "0.8"
js-sys = "0.3"
log = "0.4"
console_log = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Request",
    "RequestInit",
    "Response",
    "console",
]

[profile.release]
opt-level = "z"